<?xml version="1.0"?>
<package format="2">
  <name>gps</name>
  <version>1.0.0</version>
  <description>The gps package</description>

  <author email="kimtj5521@gmail.com">tjkim</author>
  <maintainer email="kimtj5521@gmail.com">tjkim</maintainer>

  <license>GPL</license>

  <url>https://github.com/kimtj5521/gps_ros_pkg</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
